[package]
name = "tankstellen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.29.0", features = ["rt", "macros"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
